mount-emitter/src/snapshots/tests__tests::test_line_to_hashmap_mount.snap
---
created: "2019-05-10T16:06:50.598296Z"
creator: insta@0.8.1
source: mount-emitter/src/lib.rs
expression: map_to_sorted_vec(line_to_hashmap(line))
---
[
    (
        "ACTION",
        "mount"
    ),
    (
        "FSTYPE",
        "ext4"
    ),
    (
        "OLD-OPTIONS",
        ""
    ),
    (
        "OLD-TARGET",
        ""
    ),
    (
        "OPTIONS",
        "rw,relatime,data=ordered"
    ),
    (
        "SOURCE",
        "/dev/sde1"
    ),
    (
        "TARGET",
        "/mnt/part1"
    )
]
