mount-emitter/src/snapshots/tests__tests::test_line_to_hashmap_swap.snap
---
created: "2019-05-10T16:06:50.598295Z"
creator: insta@0.8.1
source: mount-emitter/src/lib.rs
expression: map_to_sorted_vec(line_to_hashmap(line))
---
[
    (
        "FSTYPE",
        "swap"
    ),
    (
        "OPTIONS",
        "defaults"
    ),
    (
        "SOURCE",
        "/dev/mapper/centos-swap"
    ),
    (
        "TARGET",
        "swap"
    )
]
