mount-emitter/src/snapshots/tests__tests::test_poll_remount.snap
---
created: "2019-05-24T20:45:19.979224Z"
creator: insta@0.8.1
source: mount-emitter/src/lib.rs
expression: line_to_command(line)
---
ReplaceMount(
    MountPoint(
        "/mnt/part1",
    ),
    DevicePath(
        "/dev/sde1",
    ),
    FsType(
        "ext4",
    ),
    MountOpts(
        "ro,relatime,data=ordered",
    ),
    MountOpts(
        "rw,data=ordered",
    ),
)
