mount-emitter/src/snapshots/tests__tests::test_poll_umount.snap
---
created: "2019-05-10T15:51:54.840072Z"
creator: insta@0.8.1
source: mount-emitter/src/lib.rs
expression: line_to_command(line)
---
RemoveMount(
    MountPoint(
        "/testPool4"
    ),
    BdevPath(
        "testPool4"
    ),
    FsType(
        "zfs"
    ),
    MountOpts(
        "rw,xattr,noacl"
    )
)
