mount-emitter/src/snapshots/tests__tests::test_swap.snap
---
created: "2019-05-24T20:45:19.979224Z"
creator: insta@0.8.1
source: mount-emitter/src/lib.rs
expression: line_to_command(line)
---
AddMount(
    MountPoint(
        "swap",
    ),
    DevicePath(
        "/dev/mapper/centos-swap",
    ),
    FsType(
        "swap",
    ),
    MountOpts(
        "defaults",
    ),
)
