mount-emitter/src/snapshots/tests__tests::test_swap_extra.snap
---
created: "2019-05-24T20:45:20.014363Z"
creator: insta@0.8.1
source: mount-emitter/src/lib.rs
expression: line_to_command(line)
---
AddMount(
    MountPoint(
        "swap",
    ),
    DevicePath(
        "/dev/mapper/VolGroup00-LogVol01",
    ),
    FsType(
        "swap",
    ),
    MountOpts(
        "defaults",
    ),
)
